{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 231,
  "lineage": "1f11dc7f-307b-8a01-04e4-e1f97f728ac6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f62581815fc9ae1f",
            "arn": "arn:aws:ec2:us-east-1:619071330204:elastic-ip/eipalloc-0f62581815fc9ae1f",
            "association_id": "eipassoc-0ab10b66f0fc356c9",
            "domain": "vpc",
            "id": "eipalloc-0f62581815fc9ae1f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03faf32399e219e98",
            "private_dns": "ip-10-10-10-151.ec2.internal",
            "private_ip": "10.10.10.151",
            "public_dns": "ec2-34-235-238-197.compute-1.amazonaws.com",
            "public_ip": "34.235.238.197",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "ram-dev-nat_eip"
            },
            "tags_all": {
              "Name": "ram-dev-nat_eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00cb4445dfc79382d",
            "arn": "arn:aws:ec2:us-east-1:619071330204:elastic-ip/eipalloc-00cb4445dfc79382d",
            "association_id": "eipassoc-0cf0b05915ac36dbf",
            "domain": "vpc",
            "id": "eipalloc-00cb4445dfc79382d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01ce3bb6caa8780f4",
            "private_dns": "ip-10-10-15-146.ec2.internal",
            "private_ip": "10.10.15.146",
            "public_dns": "ec2-54-210-214-152.compute-1.amazonaws.com",
            "public_ip": "54.210.214.152",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "ram-dev-nat_eip"
            },
            "tags_all": {
              "Name": "ram-dev-nat_eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619071330204:internet-gateway/igw-0e009c3239c0401c0",
            "id": "igw-0e009c3239c0401c0",
            "owner_id": "619071330204",
            "region": "us-east-1",
            "tags": {
              "Name": "ram-dev-igw"
            },
            "tags_all": {
              "Name": "ram-dev-igw"
            },
            "vpc_id": "vpc-0abfe3d3759d1c75f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f62581815fc9ae1f",
            "association_id": "eipassoc-0ab10b66f0fc356c9",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0ab81a9b42f0a6f2f",
            "network_interface_id": "eni-03faf32399e219e98",
            "private_ip": "10.10.10.151",
            "public_ip": "34.235.238.197",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08c2a82b88b512ac1",
            "tags": {
              "Name": "ram-dev-nat_gw-1a"
            },
            "tags_all": {
              "Name": "ram-dev-nat_gw-1a"
            },
            "vpc_id": "vpc-0abfe3d3759d1c75f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00cb4445dfc79382d",
            "association_id": "eipassoc-0cf0b05915ac36dbf",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-096231a95b9fc7430",
            "network_interface_id": "eni-01ce3bb6caa8780f4",
            "private_ip": "10.10.15.146",
            "public_ip": "54.210.214.152",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01cc70acbca502d86",
            "tags": {
              "Name": "ram-dev-nat_gw-1b"
            },
            "tags_all": {
              "Name": "ram-dev-nat_gw-1b"
            },
            "vpc_id": "vpc-0abfe3d3759d1c75f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619071330204:route-table/rtb-049353a514e1ab0c6",
            "id": "rtb-049353a514e1ab0c6",
            "owner_id": "619071330204",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ab81a9b42f0a6f2f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ram-dev-privrt-1a"
            },
            "tags_all": {
              "Name": "ram-dev-privrt-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abfe3d3759d1c75f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619071330204",
            "id": "rtb-049353a514e1ab0c6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619071330204:route-table/rtb-0368167c0d472897a",
            "id": "rtb-0368167c0d472897a",
            "owner_id": "619071330204",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-096231a95b9fc7430",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ram-dev-privrt-1b"
            },
            "tags_all": {
              "Name": "ram-dev-privrt-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abfe3d3759d1c75f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619071330204",
            "id": "rtb-0368167c0d472897a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619071330204:route-table/rtb-00ee1252d0dc20d15",
            "id": "rtb-00ee1252d0dc20d15",
            "owner_id": "619071330204",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e009c3239c0401c0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ram-dev-pubrt"
            },
            "tags_all": {
              "Name": "ram-dev-pubrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abfe3d3759d1c75f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619071330204",
            "id": "rtb-00ee1252d0dc20d15",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06149d09ad7248f84",
            "region": "us-east-1",
            "route_table_id": "rtb-049353a514e1ab0c6",
            "subnet_id": "subnet-07fb291e312ebb140"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04430d99c73ee6f14",
            "region": "us-east-1",
            "route_table_id": "rtb-0368167c0d472897a",
            "subnet_id": "subnet-0df5f5aad05f6be99"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f21c6155728a5c6",
            "region": "us-east-1",
            "route_table_id": "rtb-00ee1252d0dc20d15",
            "subnet_id": "subnet-08c2a82b88b512ac1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f0410de42070b03",
            "region": "us-east-1",
            "route_table_id": "rtb-00ee1252d0dc20d15",
            "subnet_id": "subnet-01cc70acbca502d86"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619071330204:security-group/sg-0efa959e3806bb048",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0efa959e3806bb048",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ram-dev-allow-ssh-http-https",
            "name_prefix": "",
            "owner_id": "619071330204",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0abfe3d3759d1c75f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619071330204",
            "id": "sg-0efa959e3806bb048",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1432798950",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0021db49b26e8f569",
            "security_group_rule_id": "sgr-0fc4651c40656a223",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.ram-eks-cluster",
            "aws_iam_role.eksrole",
            "aws_iam_role_policy_attachment.AmazonEKSClusterPolicy",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619071330204:subnet/subnet-07fb291e312ebb140",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fb291e312ebb140",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619071330204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ram-dev-priv-1a",
              "kubernetes.io/cluster/ram-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ram-dev-priv-1a",
              "kubernetes.io/cluster/ram-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0abfe3d3759d1c75f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619071330204",
            "id": "subnet-07fb291e312ebb140",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619071330204:subnet/subnet-0df5f5aad05f6be99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.25.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df5f5aad05f6be99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "619071330204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ram-dev-priv-1b",
              "kubernetes.io/cluster/ram-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ram-dev-priv-1b",
              "kubernetes.io/cluster/ram-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0abfe3d3759d1c75f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619071330204",
            "id": "subnet-0df5f5aad05f6be99",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619071330204:subnet/subnet-08c2a82b88b512ac1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c2a82b88b512ac1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "619071330204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ram-dev-pub-1a",
              "kubernetes.io/cluster/ram-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ram-dev-pub-1a",
              "kubernetes.io/cluster/ram-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0abfe3d3759d1c75f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619071330204",
            "id": "subnet-08c2a82b88b512ac1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619071330204:subnet/subnet-01cc70acbca502d86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.15.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cc70acbca502d86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "619071330204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ram-dev-pub-1b",
              "kubernetes.io/cluster/ram-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ram-dev-pub-1b",
              "kubernetes.io/cluster/ram-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0abfe3d3759d1c75f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619071330204",
            "id": "subnet-01cc70acbca502d86",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:619071330204:vpc/vpc-0abfe3d3759d1c75f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02f1ddf595583a1f5",
            "default_route_table_id": "rtb-0b6843a8335499ad6",
            "default_security_group_id": "sg-00f27a6e8d6921443",
            "dhcp_options_id": "dopt-0e4e7f810708938e0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0abfe3d3759d1c75f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b6843a8335499ad6",
            "owner_id": "619071330204",
            "region": "us-east-1",
            "tags": {
              "Name": "ram-dev-vpc"
            },
            "tags_all": {
              "Name": "ram-dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "619071330204",
            "id": "vpc-0abfe3d3759d1c75f",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}